# church_controller_rust

./: .gitignore  Cargo.toml  flake.nix  options.json
ahk_files/: pause_play_global.ahk  program_opener_debug.ahk  propre_send.ahk  send_obs_back_to_propre.ahk
src/: main.rs  todo.txt
src/ahk_files/: music_toggle.ahk  send_obs_back_to_propre.ahk
src/modules/: external_interface.rs  io_handler.rs  message_handler.rs  mod.rs  socket_handler.rs  states_io_handler.rs  tray_icon.rs
src/modules/ahk_files/: pause_play_global.ahk  program_opener.ahk  window_activator.ahk
src/modules/stream_states/: enums.rs  state_update.rs  stream_states_class.rs
src/tests/: io_handler_tests.rs  main_tests.rs  message_handler_tests.rs  mod.rs  socket_handler_tests.rs  state_update_tests.rs  states_io_handler_tests.rs  stream_states_tests.rs  tests.rs
